Captions above patterns in survey results

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
@@ -37,3 +37,12 @@
 .p-results__layout td {
     vertical-align: top;
 }
+
+.p-results__listcaption {
+	height: 20px;
+	margin-top: 20px;
+	opacity: 0.5;
+	font-size: 1.3em;
+	width: 280px;
+	text-align: center;
+}
