Add smooth transitions in b-photoresponsepattern using d3

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
@@ -13,6 +13,13 @@
 /* 	interpolate: basis; */
 }
 
+.b-photoresponsepattern .answer.new {
+	opacity: 1;
+}
 .b-photoresponsepattern .answer:hover {
     opacity: 0.5;
+}
+
+.b-photoresponsepattern .photoResponses {
+	
 }
