--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
@@ -39,10 +39,10 @@
 }
 
 .p-results__listcaption {
-	height: 20px;
+	height: 16px;
 	margin-top: 20px;
 	opacity: 0.5;
 	font-size: 1.3em;
 	width: 280px;
-	text-align: center;
+	text-align: left;
 }
