--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -47,7 +47,7 @@
 {% endblock %}
 
 {% block assets_js %}
-	{% javascripts output='static/js/vendor.js' filter="?closure" combine=true
+	{% javascripts output='static/js/vendor.js' filter="" combine=true
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/d3/d3.v3.min.js'
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.js'
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.canvas.js'
