pat: more interface preferences are now saved to local storage

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -64,6 +64,10 @@
 	overflow: auto;
 }
 
+.b-infolist_disabled-thumbnails .b-infolist__item {
+	background-image: none !important;
+}
+
 .b-infolist__item {
 	color: #666;
 	height: 17px;
