--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -71,6 +71,7 @@
 
 	{% javascripts output='static/js/commons.js' filter="?closure"
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/js/config.js'
+        '@KachkaevPhotoAssessmentBundle/Resources/assets/js/ObjectPropertyStateManager.js'
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/js/pat/*.js'
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/js/pat/photoInfoProvider/*.js'
 		'@KachkaevPhotoAssessmentBundle/Resources/assets/bem/blocks/*/*.js'
