--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
@@ -40,9 +40,10 @@
 
 .p-results__listcaption {
 	height: 16px;
-	margin-top: 20px;
+	margin-top: 6px;
 	opacity: 0.5;
 	font-size: 1.3em;
 	width: 280px;
 	text-align: left;
+	margin-left: -1px;
 }
