b-infolist css styles improvements

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -87,9 +87,15 @@
 }
 .b-infolist_thumbnails_enabled .b-infolist__item {
     background-color: #fff !important;
+    border-color: #fff;
 }
 .b-infolist_thumbnails_enabled .b-infolist__item.status_1 {
     background-color: #F7D9D9 !important;
+}
+
+.b-infolist_thumbnails_enabled .b-infolist__item.unread {
+    -webkit-box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, .2);
+    box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, .2);
 }
 
 /** viewModeShowProblems */
