--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -86,7 +86,7 @@
 	background-image: none !important;
 }
 .b-infolist_thumbnails_enabled .b-infolist__item {
-    background-color: #fff !important;
+    background-color: #f5f5f5 !important;
     border-color: #fff;
 }
 .b-infolist_thumbnails_enabled .b-infolist__item.status_1 {
@@ -119,7 +119,7 @@
     font-size: 15px;
     line-height: 18px;
     background-repeat: no-repeat;
-    background-position: 1px 1px;
+    background-position: 0px 0px;
 }
 
 .b-infolist__item.photo_problem {
@@ -146,7 +146,7 @@
     height: 15px;
     width: 15px;
     line-height: 16px;
-    background-position: 0px 0px;
+    background-position: -1px -1px;
  }
 
 .b-infolist__item.current {
@@ -156,7 +156,7 @@
     height: 15px;
     width: 15px;
     line-height: 16px;
-    background-position: -1px -1px;
+    background-position: -2px -2px;
     background-position: 0 0;
 }
 
