Results: improve thumbnail rendering - remove background from canvas, now excluded items have visible native background behind the thumbnail

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -86,8 +86,11 @@
 	background-image: none !important;
 }
 .b-infolist_thumbnails_enabled .b-infolist__item {
-    background-color: #f5f5f5 !important;
+    background-color: #fff !important;
     border-color: #fff;
+}
+.b-infolist_thumbnails_enabled .b-infolist__item.thumbnail_rendering {
+    background-color: #f5f5f5 !important;
 }
 .b-infolist_thumbnails_enabled .b-infolist__item.status_1 {
     background-color: #F7D9D9 !important;
