Minor css fix in b-infolist

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -159,7 +159,7 @@
     height: 15px;
     width: 15px;
     line-height: 16px;
-    background-position: -2px -2px;
+    background-position: -1px -1px !important;
     background-position: 0 0;
 }
 
