--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -29,40 +29,42 @@
 	bottom: 0px;
 }
 
-/* sorters */
-.b-infolist__sorters {
-	
+/* sort order pickers */
+.b-infolist__sopickers-container {
+	float: left;
+	height: 20px;
 }
 
-.b-infolist__sorter {
+.b-infolist__sopickers-controls {
     float: left;
-    margin-right: 10px;
-    padding-right: 10px;
-    color: #009;
+    height: 20px;
+}
+
+.b-infolist__sopickers-adder,
+.b-infolist__sopickers-remover {
+    float: left;
+    height: 20px;
+    width: 20px;
+    opacity: 0.3;
+    transition:opacity 0.3s linear;
     cursor: pointer;
-    background: no-repeat right 0.5em;
-	opacity: .6;
-}
-.b-infolist__sorter:hover {
-	opacity: 1;
-}
-.b-infolist__sorter.descending,
-.b-infolist__sorter.ascending {
-    color: #000;
-}
-.b-infolist__sorter.ascending {
-    background-image: url("data:image/gif;base64,R0lGODlhBwAEAIABAKydhf///yH5BAEAAAEALAAAAAAHAAQAAAIHjGEJq8sOCwA7");
-}
-.b-infolist__sorter.descending {
-	background-image: url("data:image/gif;base64,R0lGODlhBwAEAIABAKydhf///yH5BAEAAAEALAAAAAAHAAQAAAIIhA+BGWoNWSgAOw%3D%3D");
+    background: no-repeat center center url("data:image/gif;base64,R0lGODlhCgAKAIABALqsmf///yH5BAEAAAEALAAAAAAKAAoAAAISjANwi8qWHnQz2YvvipI/z4AFADs=");
 }
 
-.b-infolist__sorter i {
-    display: block;
-    float: left;
-    border-bottom: 1px dotted;
-    height: 1.1em;
+.b-infolist__sopickers-remover {
+    
 }
+
+.b-infolist__sopickers-controls:hover .b-infolist__sopickers-adder,
+.b-infolist__sopickers-controls:hover .b-infolist__sopickers-remover {
+	opacity: 0.5;
+}
+
+.b-infolist__sopickers-controls:hover .b-infolist__sopickers-adder:hover,
+.b-infolist__sopickers-controls:hover .b-infolist__sopickers-remover:hover {
+    opacity: 1;
+}
+
 
 /* percentage */
 .b-infolist__percentage {
@@ -106,7 +108,6 @@
     content: none !important;
 }
 
-
 .b-infolist__item {
 	color: #666;
 	height: 17px;
@@ -143,7 +144,7 @@
 
 .b-infolist__item:hover,
 .b-infolist__item.highlighted {
-	border-color: #555;
+	border-color: #888;
     border-radius: 2px;
     border-width: 2px;
     height: 15px;
@@ -194,12 +195,15 @@
 }
 
 /* colour photos by photo source */
-/* .b-infolist__item.source_flickr {
-	background-color: purple !important;
+/* .b-infolist__item {
+    opacity: 0.5;
+}
+.b-infolist__item.source_flickr {
+	background-color: #a23d72 !important;
 }
 .b-infolist__item.source_geograph {
-    background-color: green !important;
+    background-color: #287342 !important;
 }
 .b-infolist__item.source_panoramio {
-    background-color: blue !important;
-}   */
+    background-color: #2b5d98 !important;
+}  */
