--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist-sopicker/b-infolist-sopicker.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist-sopicker/b-infolist-sopicker.scss
@@ -15,6 +15,7 @@
     border-bottom: 1px dotted;
     height: 1.1em;
     opacity: 0.6;
+    transition:opacity 0.3s linear;
 }
 
 .b-infolist-sopicker__current:hover{
@@ -26,11 +27,19 @@
 	display: block;
     cursor: pointer;
     float: left;
+    opacity: 0.5;
+    transition:opacity 0.3s linear;
     background: no-repeat right 0.5em;
+    width: .8em;
+    height: 20px;
     background-image: url("data:image/gif;base64,R0lGODlhBwAEAIABAKydhf///yH5BAEAAAEALAAAAAAHAAQAAAIHjGEJq8sOCwA7");
 }
 .b-infolist-sopicker__ascdesc_descending {
 	background-image: url("data:image/gif;base64,R0lGODlhBwAEAIABAKydhf///yH5BAEAAAEALAAAAAAHAAQAAAIIhA+BGWoNWSgAOw%3D%3D");
+}
+
+.b-infolist-sopicker__ascdesc:hover {
+    opacity: 1;
 }
 
 /* list */
@@ -42,6 +51,8 @@
 	left: 0px;
 	border: 1px solid #ccc;
 	z-index: 101;
+    -webkit-box-shadow:  0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+    box-shadow:  0px 2px 5px 0px rgba(0, 0, 0, 0.3);
 }
 .b-infolist-sopicker__list_open {
     display: block;	
@@ -49,8 +60,6 @@
 .b-infolist-sopicker__list-item {
 	padding: 0 5px;
 	background: #fff;
-    -webkit-box-shadow:  0px 2px 5px 0px rgba(0, 0, 0, 0.3);
-    box-shadow:  0px 2px 5px 0px rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
 .b-infolist-sopicker__list-item:hover {
@@ -59,7 +68,8 @@
 
 .b-infolist-sopicker__list-item_current {
 	cursor: default;
-	backgrground: #ccc !imponrtant;
+	background: #f0f0f0 !important;
+	color: #000;
 }
 
 /* blind */
