--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-infolist/b-infolist.scss
@@ -98,7 +98,12 @@
     background-color: #F7D9D9 !important;
 }
 
-.b-infolist_thumbnails_enabled .b-infolist__item.unread {
+.b-infolist_thumbnails_disabled.b-infolist_unread_enabled .b-infolist__item.unread {
+    -webkit-box-shadow: inset 0px 0px 3px 2px rgba(255, 255, 255, 1);
+    box-shadow: inset 0px 0px 3px 2px rgba(255, 255, 255, 1);
+}
+
+.b-infolist_thumbnails_enabled.b-infolist_unread_enabled .b-infolist__item.unread {
     -webkit-box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, .2);
     box-shadow: inset 0px 0px 2px 2px rgba(0, 0, 0, .2);
 }
@@ -133,13 +138,6 @@
 }
 .b-infolist__item.photo_problem_severe {
     color: rgba(0,0,0,1);
-}
-
-.b-infolist__item.unread {
-	-webkit-box-shadow: inset 0px 0px 3px 2px rgba(255, 255, 255, 1);
-	box-shadow: inset 0px 0px 3px 2px rgba(255, 255, 255, 1);
-}
-.b-infolist__item.unread:before {
 }
 
 .b-infolist__item:hover,
