--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -20,8 +20,10 @@
         <tr>
             <td>
                 <h2 class="p-results__listcaption p-results__listcaption__user"></h2>
-            </td><td colspan="2">
+            </td><td>
                 <h2 class="p-results__listcaption p-results__listcaption__photo"></h2>
+            </td><td rowspan="2">
+                <div class="b-survey-photo b-survey-photo_small"></div>
             </td>
         </tr>
         
@@ -30,8 +32,6 @@
                 <div class="b-photoresponsepattern b-photoresponsepattern_user"></div>
             </td><td>
                 <div class="b-photoresponsepattern b-photoresponsepattern_photo"></div>
-            </td><td>
-                <div class="b-survey-photo b-survey-photo_small"></div>
             </td>
         </tr>
 	</table>
