Add baseline to b-photoresponsepattern

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
@@ -13,6 +13,11 @@
     color: #999;
 }
 
+.b-photoresponsepattern .baseline {
+    stroke-width: 1;
+    stroke: #6273c0;
+}
+
 .b-photoresponsepattern .answer {
 	fill: none;
 	opacity: 0.15;
