exclusion → status, pattern animation easing, changes in config

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photoresponsepattern/b-photoresponsepattern.scss
@@ -15,7 +15,7 @@
 
 .b-photoresponsepattern .baseline {
     stroke-width: 1;
-    stroke: #6273c0;
+    stroke: #c0d4f3;
 }
 
 .b-photoresponsepattern .answer {
