Implement basing viewing of faces on the results page

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-survey-photo/b-survey-photo.scss
@@ -119,3 +119,17 @@
 .b-survey-photo_small .b-survey-photo__timestampanduser {
 	float: right;
 }
+
+.b-survey-photo__faces {
+	position: absolute;
+    top: 15px;
+    left: 15px;
+    overflow: hidden;
+}
+.b-survey-photo__face {
+    position: absolute;
+    border: 1px solid;
+}
+.b-survey-photo__face:hover {
+	background: rgba(255,255,255, .2);
+}
