--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/layouts/base.html.twig
@@ -56,6 +56,7 @@
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.tmpl.js'
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.scrollintoview.modif.js'
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.ui.js'
+    '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.ui.boxer.js'
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/jquery/jquery.preload.js'
     
     '@KachkaevPhotoAssessmentBundle/Resources/assets/vendor/underscore/underscore.js'
