--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
@@ -11,6 +11,7 @@
 {% block body_modif %} class="p-index"{% endblock %}
 
 {% block body %}
+{% if surveyClosed %}<div class="b-survey-closed"><div class="b-survey-closed__plate">{{ 'survey_closed' | trans }}</div></div>{% endif %}
 		<div class="p-index__header">
 			<h1 class="p-index__header-title">{{ 'title' | trans }}</h1>
 {#			<div class="p-index__header-subtitle">share your view on photographs</div>
