--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/index.html.twig
@@ -46,10 +46,12 @@
 			{{- 'index.details_1_5' | trans -}}
 			<a target="_blank" href="http://www.soi.city.ac.uk/~jwo/">{{- 'index.details_1_6' | trans -}}</a>
 			{{- 'index.details_1_7' | trans -}}
-			<a target="_blank" href="http://creativecommons.org/licenses/by/2.0/" title="{{- 'index.details_1_8_title' | trans -}}">{{- 'index.details_1_8' | trans -}}</a>
+			<a target="_blank" href="https://github.com/kachkaev/photoassessment/tree/master/data" title="{{- 'index.details_1_8_title' | trans -}}">{{- 'index.details_1_8' | trans -}}</a>
 			{{- 'index.details_1_9' | trans -}}
-			<a target="_blank" href="https://github.com/kachkaev/photoassessment">{{- 'index.details_1_10' | trans -}}</a>
+			<a target="_blank" href="http://creativecommons.org/licenses/by/2.0/" title="{{- 'index.details_1_10_title' | trans -}}">{{- 'index.details_1_10' | trans -}}</a>
 			{{- 'index.details_1_11' | trans -}}
+			<a target="_blank" href="https://github.com/kachkaev/photoassessment">{{- 'index.details_1_12' | trans -}}</a>
+			{{- 'index.details_1_13' | trans -}}
 			</p>
 			<p class="p-index__details-right">
 			{{- 'index.details_2_1' | trans -}}
