--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/pages/p-results/p-results.scss
@@ -47,6 +47,10 @@
     vertical-align: top;
 }
 
+.p-results__listcaptions td{
+    height: 22px !important;	
+}
+
 .p-results__listcaption {
 	height: 16px;
 	margin-top: 6px;
