--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/includes/b-help.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/includes/b-help.html.twig
@@ -207,16 +207,22 @@
         <dd>toggles highlighting of unchecked users</dd>
         
         <dt class="sameline"><i class="key">1</i></dt>
-        <dd>numbers of responses</dd>
+        <dd>item mode: response thumbnails</dd>
         
         <dt class="sameline"><i class="key">2</i></dt>
-        <dd>luminance</dd>
+        <dd>item mode: response count</dd>
 
         <dt class="sameline"><i class="key">3</i></dt>
-        <dd>source</dd>
+        <dd>item mode: luminance (photos only)</dd>
 
         <dt class="sameline"><i class="key">4</i></dt>
-        <dd>time taken</dd>
+        <dd>item mode: source (photos only)</dd>
+        
+        <dt class="sameline"><i class="key">5</i></dt>
+        <dd>item mode: time taken (photos only)</dd>
+        
+        <dt class="sameline"><i class="key">6</i></dt>
+        <dd>item mode: greenness (photos only)</dd>
         
         <dt class="sameline"><i class="key">space</i></dt>
         <dd>resets response duration scale</dd>
