--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -19,7 +19,7 @@
 	        </td>
         </tr>
         
-        <tr>
+        <tr class="p-results__listcaptions">
             <td>
                 <h2 class="p-results__listcaption p-results__listcaption__user"></h2>
             </td><td>
