--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/includes/b-help.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/includes/b-help.html.twig
@@ -171,6 +171,41 @@
 {# ========================== #}
 <li class="b-help__tab-body" data-id="controls">
     <dl class="controls-dl-1">
+        <dt class="sameline"><i class="key">1</i></dt>
+        <dd>item mode: response thumbnails</dd>
+        
+        <dt class="sameline"><i class="key">2</i></dt>
+        <dd>item mode: response count</dd>
+
+        <dt class="sameline"><i class="key">3</i></dt>
+        <dd>item mode: luminance from exif (photos only)</dd>
+
+        <dt class="sameline"><i class="key">4</i></dt>
+        <dd>item mode: source (photos only)</dd>
+        
+        <dt class="sameline"><i class="key">5</i></dt>
+        <dd>item mode: time of day when photo is taken from exif (photos only)</dd>
+        
+        <dt class="sameline"><i class="key">6</i></dt>
+        <dd>item mode: manually assigned greenness score (photos only)</dd>
+
+        <dt class="sameline"><i class="key">7</i></dt>
+        <dd>item mode: face detection using 7 different algorithms (photos only)</dd>
+        
+        <dt class="sameline"> </dt>
+        <dd> </dd>
+        
+        <dt class="sameline"><i class="key">T</i></dt>
+        <dd>toggles time mode in glyphs (design 1 only, design 2 is switched on from the source)</dd>
+        
+        <dt class="sameline"><i class="key">P</i></dt>
+        <dd>toggles showing of API problems in items</dd>
+            
+        <dt class="sameline"><i class="key">U</i></dt>
+        <dd>toggles highlighting of unchecked users</dd>
+    </dl>
+    
+    <dl class="controls-dl-2">
         <dt><i class="action">click on a user or a photo</i></dt>
         <dd>selects the item and shows related responses below the list</dd>
 
@@ -178,7 +213,7 @@
         <dd>toggles the state of the item (unavailable in the read-only mode)</dd>
 
         <dt><i class="action">hover over a user or a photo</i></dt>
-        <dd>highlights related items in another other list</dd>
+        <dd>highlights related items in another list</dd>
         
         <dt class="sameline"><i class="key">Esc</i></dt>
         <dd>deselects items</dd>
@@ -191,38 +226,6 @@
         
         <dt class="sameline"><i class="key key_bracket">]</i></dt>
         <dd>reopens the next view</dd>
-        
-    </dl>
-    <dl class="controls-dl-2">
-        <dt class="sameline"><i class="key">T</i></dt>
-        <dd>shows or hides response thumbnails</dd>
-        
-        <dt class="sameline"><i class="key">D</i></dt>
-        <dd>toggles thumbnail design in items (normal / involving response duration)</dd>
-        
-        <dt class="sameline"><i class="key">P</i></dt>
-        <dd>toggles showing of API problems in items</dd>
-        
-        <dt class="sameline"><i class="key">U</i></dt>
-        <dd>toggles highlighting of unchecked users</dd>
-        
-        <dt class="sameline"><i class="key">1</i></dt>
-        <dd>item mode: response thumbnails</dd>
-        
-        <dt class="sameline"><i class="key">2</i></dt>
-        <dd>item mode: response count</dd>
-
-        <dt class="sameline"><i class="key">3</i></dt>
-        <dd>item mode: luminance (photos only)</dd>
-
-        <dt class="sameline"><i class="key">4</i></dt>
-        <dd>item mode: source (photos only)</dd>
-        
-        <dt class="sameline"><i class="key">5</i></dt>
-        <dd>item mode: time taken (photos only)</dd>
-        
-        <dt class="sameline"><i class="key">6</i></dt>
-        <dd>item mode: greenness (photos only)</dd>
         
         <dt class="sameline"><i class="key">space</i></dt>
         <dd>resets response duration scale</dd>
