--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -9,6 +9,7 @@
 		<h1><a href="{{ path("pat_default_index") }}">{{ 'pat_default_index.h1' | trans }}</a>{{ 'pat_default_results.h1' | trans }}
 		{%-  if (not backdoorSecret) %} <span class="p-results__header-readonly" title="{{ 'pat_default_results.read_only.title' | trans }}">{{ 'pat_default_results.read_only' | trans }}</span>{% endif -%}
 		</h1>
+		<a href="#" class="p-results__header-help" title="open help screen (H)">?</a>
 	</div>
 	<table class="p-results__layout">
 	    <tr>
