New thumbnail mode: photo previews

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/includes/b-help.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Components/includes/b-help.html.twig
@@ -192,9 +192,12 @@
         <dt class="sameline"><i class="key">7</i></dt>
         <dd>item mode: face detection using 7 different algorithms (photos only)</dd>
         
-        <dt class="sameline"> </dt>
-        <dd> </dd>
+        <dt class="sameline"><i class="key">8</i></dt>
+        <dd>item mode: image previews (photos only)</dd>
         
+{#        <dt class="sameline"> </dt>
+        <dd> </dd>
+#}        
         <dt class="sameline"><i class="key">T</i></dt>
         <dd>toggles time mode in glyphs (design 1 only, design 2 is switched on from the source)</dd>
         
