Fixes in layout on the results page (add dummy map)

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -15,7 +15,8 @@
 	    <tr>
 	        <td>
 	            <div class="b-infolist b-infolist_user"></div>
-	        </td><td colspan="2">
+	        </td>
+	        <td colspan="3">
 	            <div class="b-infolist b-infolist_photo"></div>
 	        </td>
         </tr>
@@ -25,10 +26,14 @@
                 <h2 class="p-results__listcaption p-results__listcaption__user"></h2>
             </td><td>
                 <h2 class="p-results__listcaption p-results__listcaption__photo"></h2>
-            </td><td rowspan="2">
+            </td>
+            <td rowspan="2" width="330">
                 <div class="b-survey-photo b-survey-photo_small"></div>
             </td>
-        </tr>
+            <td rowspan="2" width="250">
+                <div class="b-photomap"></div>
+            </td>
+            </tr>
         
         <tr>
             <td>
