--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -24,13 +24,13 @@
         <tr class="p-results__listcaptions">
             <td>
                 <h2 class="p-results__listcaption p-results__listcaption__user"></h2>
-            </td><td>
+            </td><td width="200">
                 <h2 class="p-results__listcaption p-results__listcaption__photo"></h2>
             </td>
             <td rowspan="2" width="330">
                 <div class="b-survey-photo b-survey-photo_small"></div>
             </td>
-            <td rowspan="2" width="250">
+            <td rowspan="2" width="245">
                 <div class="b-photomap"></div>
             </td>
             </tr>
