--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photomap/b-photomap.scss
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/assets/bem/blocks/b-photomap/b-photomap.scss
@@ -43,3 +43,16 @@
 	right: 0;
 	bottom: 0;
 }
+
+.b-photomap__copyright {
+    color: #888;
+    font-size: 10px;
+    line-height: 14px;
+    position: absolute;
+    right: 0;
+    top: 200px;
+    opacity: 0.6;
+    overflow: visible;
+    white-space: nowrap;
+    
+}
