Hide map copyright on results page until everything is loaded

--- a/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
+++ b/src/Kachkaev/PhotoAssessmentBundle/Resources/views/Default/results.html.twig
@@ -31,7 +31,7 @@
                 <div class="b-survey-photo b-survey-photo_small"></div>
             </td>
             <td rowspan="2" width="245">
-                <div class="b-photomap"><div class="b-photomap__copyright">© OSM contributors, rendered with MapBox</div></div>
+                <div class="b-photomap"><div class="b-photomap__copyright b-photomap__copyright_visibility_hidden">© OSM contributors, rendered with MapBox</div></div>
             </td>
             </tr>
         
